# ipfs_accelerate_py

./: .asyncio_allowlist  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  100_PERCENT_COVERAGE_ACHIEVEMENT.md  ACTIVE_RUNNERS_INTEGRATION.md  ALTERNATIVE_BACKENDS_GUIDE.md  ALTERNATIVE_VISUAL_VERIFICATION_REPORT.md  API_INTEGRATIONS_COMPLETE.md  ARM64_INFRASTRUCTURE_FIX.md  ASYNCIO_TO_ANYIO_CHECKLIST.md  ASYNCIO_TO_ANYIO_MIGRATION.md  ASYNCIO_TO_ANYIO_README.md  ASYNCIO_TO_ANYIO_SUMMARY.md  AUTOSCALER.md  AUTOSCALER_VALIDATION_REPORT.md  AUTO_HEAL_COPILOT_INTEGRATION.md  AUTO_HEAL_FIXES_2025-10-30.md  AUTO_HEAL_FIXES_SUMMARY.md  AUTO_HEAL_FIX_SUMMARY.md  AUTO_HEAL_IMPLEMENTATION_SUMMARY.md  AUTO_HEAL_QUICK_REFERENCE.md  AUTO_HEAL_SYSTEM_FIX_COMPLETE.md  AUTO_HEAL_WORKFLOW_FIXES_2025-10-30.md  AUTO_PATCHING_SOLUTION.md  AUTO_UPDATE_SYSTEM.md  BRANCH_CLEANUP_SUMMARY.md  CACHING_INFRASTRUCTURE_ALIGNMENT.md  CHANGELOG.md  CICD_MCP_VALIDATION_REPORT.md  CICD_MCP_VALIDATION_REPORT_2025-10-23.md  CI_CD_FAILURE_ANALYSIS.md  CI_CD_MIGRATION_SUMMARY.md  CI_CD_QUICK_REFERENCE.md  CI_CD_TEST_FIXES_SUMMARY.md  CI_CD_UPDATES_SUMMARY.md  CI_SHIMS_REMOVAL_SUMMARY.md  CLI_ENDPOINT_INTEGRATION.md  (+501 more)
.cargo/: config.toml
.github/: AUTO_HEAL_README.md  GITHUB_TOKEN_MANAGEMENT.md  GPU_TESTING.md  TESTING_GUIDE.md  auto-heal-config.yml  cache-config.yml  p2p-config.yml
.state/: last_libp2p_reinstall.epoch
benchmarks/: BENCHMARK_CI_INTEGRATION.md  BENCHMARK_COMPLETION_REPORT.md  BENCHMARK_DATABASE_GUIDE.md  BENCHMARK_DATABASE_SUMMARY.md  BENCHMARK_DB_FIX.md  BENCHMARK_DB_INTEGRATION_SUCCESS.md  BENCHMARK_DB_QUERY_GUIDE.md  BENCHMARK_HUGGINGFACE_INTEGRATION.md  BENCHMARK_JSON_DEPRECATION_GUIDE.md  BENCHMARK_SIMULATION_FIXES_README.md  BENCHMARK_TIMING_GUIDE.md  BENCHMARK_TIMING_REPORT_GUIDE.md  BENCHMARK_TIMING_REPORT_UPDATES.md  BENCHMARK_WORK_SUMMARY.md  HARDWARE_BENCHMARKING_GUIDE.md  HARDWARE_BENCHMARKING_GUIDE_PHASE16.md  HARDWARE_BENCHMARKING_PLAN.md  TIME_SERIES_PERFORMANCE_GUIDE.md  benchmark_error_handling.py  benchmark_hardware_models.py  benchmark_hardware_performance.py  benchmark_llama_clap.py  benchmark_model_verification.py  benchmark_onnx_integration.py  benchmark_openvino.py  benchmark_report.html  benchmark_report.md  benchmark_resource_pool_integration.py  benchmark_summary.md  benchmark_timing_report.markdown  benchmark_webnn_webgpu_resource_pool.py  benchmark_with_db_integration.py  create_minimal_generator.py  final_benchmark_report.md  fix_all_generators.py  fix_benchmark_runner.py  fix_generator_hardware_support.py  fix_generators_critical.py  fix_generators_phase16.py  fix_generators_phase16_final.py  (+26 more)
ci/: __init__.py
common/: __init__.py  hardware_detection.py
config/: env.example  ipfs_accelerate_js_jest.config.js  keywords.txt
data/: README_OUTPUT_DIRECTORIES.md  __init__.py  model_manager.duckdb.wal  models.db  wheels.txt
deployments/: Dockerfile  advanced_deploy.sh  cloud_deployment.yaml  deploy.sh  deployment_checklist.md  docker-compose.yml  health_check.py  kubernetes.yaml  monitoring.yaml  rollback.sh  setup_ssl.sh  ssl_config.yaml
distributed_testing/: __init__.py
docs/: AI_MCP_SERVER_IMPLEMENTATION.md  AI_MODEL_DISCOVERY_README.md  API.md  ARCHITECTURE.md  AUTOMATION_INTEGRATION_PLAN.md  AUTOMATION_README.md  BEST_PRACTICES.md  CI_CD_UPDATES_SUMMARY.md  CLI_ENDPOINT_ADAPTERS.md  CLI_IMPLEMENTATION_COMPLETE.md  CLI_NAMING_FIX_SUMMARY.md  COMPLETE_SYSTEM_VERIFICATION_REPORT.md  COMPREHENSIVE_DOCUMENTATION_UPDATE_SUMMARY.md  COMPREHENSIVE_INFERENCE_VERIFICATION_REPORT.md  COMPREHENSIVE_SYSTEM_VERIFICATION_REPORT.md  CONVERSION_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_EXECUTION.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW_SUMMARY.md  EMBEDDINGS_ROUTER.md  FAQ.md  FINAL_E2E_TEST_VALIDATION.md  FINAL_MOJO_MAX_TEST_REPORT.md  FINAL_SUCCESS_SUMMARY.md  FINAL_TESTING_INFRASTRUCTURE_REVIEW.md  FINAL_TEST_REVIEW_SUMMARY.md  GITHUB_ACTIONS_ARCHITECTURE.md  GITHUB_ACTIONS_INFRASTRUCTURE.md  GITHUB_CLI_CACHE.md  GITHUB_CLI_CACHE_QUICKREF.md  GITHUB_CLI_CACHE_STATUS.md  GITHUB_WORKFLOW_FIXES.md  HARDWARE.md  HF_MODEL_TESTING_REVIEW.md  HUGGINGFACE_REPOSITORY_INTEGRATION.md  Huggingface_Model_Manager.html  Huggingface_Model_Manager_with_data.html  (+76 more)
duckdb_api/: DIRECTORY_STRUCTURE.md  README.md  __init__.py  benchmark_db_api.py  benchmark_db_api_orig.py  benchmark_db_converter.py  benchmark_db_maintenance_script.py  benchmark_db_migration.py  benchmark_db_query.py  benchmark_db_query_script.py  benchmark_db_updater.py  benchmark_db_updater_orig.py  benchmark_db_visualizer.py  fix_benchmark_db_schema.py  fixed_benchmark_db_query.py  query_db.py  query_webnn_benchmark_db.py  update_benchmark_db.py  (+2 more)
(+17028 files in other folders)
