[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_accelerate_py"
version = "0.0.44"
authors = [
  { name="Benjamin Barber", email="starworks5@gmail.com" },
]
description = "a python model server and api endpoint demultiplexer."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
]
[project.urls]
Homepage = "https://github.com/endomorphosis/ipfs_accelerate_py"
Issues = "https://github.com/endomorphosis/ipfs_accelerate_py/issues"