[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipfs_accelerate_py"
version = "0.0.45"
authors = [
  { name="Benjamin Barber", email="starworks5@gmail.com" },
]
description = "A comprehensive framework for hardware-accelerated machine learning inference with IPFS network-based distribution"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GNU Affero General Public License v3 or later (AGPLv3+)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/endomorphosis/ipfs_accelerate_py"
Issues = "https://github.com/endomorphosis/ipfs_accelerate_py/issues"

[project.scripts]
ipfs_accelerate = "ipfs_accelerate_py.ai_inference_cli:main"
ipfs-accelerate = "ipfs_accelerate_py.cli_entry:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
minimal = [
  "aiohttp>=3.8.1",
  "duckdb>=0.7.0",
  "ipfshttpclient>=0.8.0a2",
  "websockets>=10.1",
  "tqdm>=4.64.0",
  "numpy>=1.23.0",
]
full = [
  "torch>=2.1",
  "transformers>=4.46",
  "uvicorn>=0.27.0",
  "fastapi>=0.110.0",
  "sentence-transformers",
  "ipfs_transformers_py",
  "ipfs_model_manager_py",
]
testing = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
]
mcp = [
  "fastmcp>=0.1.0",
  "async-timeout>=4.0.0",
]
mcp-p2p = [
  "libp2p>=0.1.5",
]
webnn = [
  "playwright>=1.31.0",
  "aiohttp>=3.8.1",
  "websockets>=10.1",
]
viz = [
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "plotly>=5.22.0",
]
all = [
  # aggregate without native P2P by default
  "torch>=2.1",
  "transformers>=4.46",
  "uvicorn>=0.27.0",
  "fastapi>=0.110.0",
  "sentence-transformers",
  "ipfs_transformers_py",
  "ipfs_model_manager_py",
  "pytest>=8.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "playwright>=1.31.0",
  "websockets>=10.1",
  "matplotlib>=3.7.0",
  "seaborn>=0.13.0",
  "plotly>=5.22.0",
  "fastmcp>=0.1.0",
  "async-timeout>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["ipfs_accelerate_py*"]
exclude = ["test*", "benchmarks*"]